--- a/index.html
+++ b/index.html
@@ -26,46 +26,20 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #475569;
       }
-      #root:empty::before {
-        content: 'Loading application...';
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        color: #64748b;
-        font-size: 0.875rem;
-      }
     </style>
-    <script type="importmap">
+  <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "@google/genai": "https://esm.sh/@google/genai@1.3.1",
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.38.0"
   }
 }
 </script>
-    <script>
-      // Enhanced error catching for Netlify deployments
-      window.onerror = function(msg, url, line, col, error) {
-        console.error("Critical error at " + url + ":" + line, msg);
-        const root = document.getElementById('root');
-        if (root && root.innerHTML === '') {
-          root.innerHTML = '<div style="padding: 20px; color: #ef4444; font-family: sans-serif;">' +
-            '<h3>Application failed to start</h3>' +
-            '<p style="font-size: 14px; opacity: 0.8;">' + msg + '</p>' +
-            '<button onclick="location.reload()" style="background: #4f46e5; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">Retry</button>' +
-            '</div>';
-        }
-        return false;
-      };
-    </script>
-  </head>
+</head>
   <body>
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
